<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_label">Quiz</string>
    <string name="level_two_label">Level Two</string>
    <string name="level_three_label">Level Three</string>
    <string name="level_one_label">Level one</string>
    <string name="next_button">Next</string>
    <string name="previous_bt">Previous</string>
    <string name="back_arrow_icon">back arrow icon</string>
    <string name="finished_time_format">00:00</string>
    <string name="finish_quiz_label">Finish</string>
    <string name="see_levels_label">See Levels</string>
    <string name="congratulations">Congratulations!</string>
    <string name="take_level_two">Take Level Two</string>
    <string name="continue_notice_message">Now you can continue to the next level.</string>
    <string name="cannot_continue_notice_message">You must pass this level to continue.</string>
    <string name="failed_level_message">Sorry, you failed this level</string>
    <string name="zero">0</string>
    <string name="win_message">You won</string>
    <string name="title_quizapp">Quiz App</string>
    <string name="top_score_text">Top Score (Out of 30)</string>
    <string name="total_label">Total</string>
    <string name="scores_label">Scores</string>
    <string name="levels_label">Levels</string>
    <string name="nice_try_label">Nice Try!</string>
    <string name="better_luck_next_time">Better luck next time</string>
    <string name="good_luck">Good Luck</string>
    <string name="home_label">Home</string>
    <string name="locked_icon">Locked</string>
</resources>
