<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="18dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="14dp"
        android:id="@+id/greetingSection">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/nice_try_label"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle"
            android:text="@string/better_luck_next_time"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
    </LinearLayout>
    <include layout="@layout/snippet_score_table" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/buttonsLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:id="@+id/nextLevelBt"
            android:text="@string/next_button"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seeLevelsBt"
            android:text="@string/see_levels_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>