<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="6dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginBottom="14dp"
        android:id="@+id/greetingSection">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/congratulations"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
        <FrameLayout
            android:id="@+id/particleView"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subtitle"
            android:text="@string/good_luck"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
    </LinearLayout>
    <include layout="@layout/snippet_score_table" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttonsLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/homeBt"
            android:text="@string/home_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>